--- a/inde.html
+++ b/inde.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contador de Data com Carrossel</title>
+    <title>Contador de Data com Imagem</title>
     <link rel="stylesheet" href="style.css"> <!-- Ligação do CSS -->
 </head>
 <body>
     <div class="container">
-        <div class="carousel">
-            <div class="carousel-images">
-                <img src="fotos/f1.jpeg" alt="Imagem 1">
-                <img src="fotos/f2.jpeg" alt="Imagem 2">
-                <img src="fotos/f3.jpeg" alt="Imagem 3">
-                <img src="fotos/f4.jpeg" alt="Imagem 4">    
-            </div>
-        </div>
+        <img src="fotos/f1.jpeg" alt="Imagem" class="main-image"> <!-- Imagem acima do contador -->
         <div class="counter">
             <div class="time">
                 <span id="days">00</span> dias
